# symciph

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
aes/: Cargo.toml
aes/src/: cipher.rs  consts.rs  key.rs  lib.rs
aes/src/cipher/: galois_field_ops.rs
aes/src/key/: aes_128.rs  aes_192.rs  aes_256.rs
crypto-primitives/src/: word.rs
crypto-primitives/src/word/: fmt.rs
des/: Cargo.toml
des/src/: cipher.rs  consts.rs  key.rs  lib.rs
src/: command.rs  io.rs  lib.rs  main.rs  strategy.rs
src/command/: decrypt.rs  encrypt.rs  generate_key.rs
src/strategy/: aes128.rs  aes192.rs  aes256.rs  aes_commons.rs  des.rs  tdes.rs
src/word/: bitwise_ops.rs  from.rs  ops.rs
tests/: io_tests.rs
tests/data/: 12_bytes.key  3des.key  6_bytes.key  aes128.key  aes256.key  des.key  des.out.key.sha1sum  out.txt.sha1sum
triple-des/: Cargo.toml
triple-des/src/: cipher.rs  lib.rs
