[package]
name = "symciph"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crypto-primitives",
    "des",
    "triple-des",
    "aes"
]

[dependencies]
crypto-primitives = { path = "./crypto-primitives" }
des ={ path = "./des" }
triple-des = { path = "./triple-des" }
aes = { path = "./aes" }