[package]
name = "symciph"
version = "0.1.2"
edition = "2021"

[workspace]
members = [
    "crypto-primitives",
    "des",
    "triple-des",
    "aes"
]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
crypto-primitives = { path = "./crypto-primitives" }
des ={ path = "./des" }
triple-des = { path = "./triple-des" }
aes = { path = "./aes" }
rand = "0.8.5"
