[package]
name = "symciph"
version = "0.1.4"
edition = "2021"
authors = ["Lukasz Orlowski (github.com/orlowskilp)"]
description = "Simple symmetric encryption tool for learning purposes"
license = "MIT"
repository = "https://github.com/orlowskilp/symciph"
readme = "README.md"
keywords = ["symmetric", "encryption", "des", "3des", "aes", "cryptography", "cli", "tool"]

[workspace]
members = [
    "crypto-primitives",
    "des",
    "triple-des",
    "aes"
]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
crypto-primitives = { path = "./crypto-primitives" }
des ={ path = "./des" }
triple-des = { path = "./triple-des" }
aes = { path = "./aes" }
rand = "0.8.5"
